--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,103 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="seed">#00975B</color>
+    <color name="md_theme_light_primary">#00696C</color>
+    <color name="md_theme_light_onPrimary">#FFFFFF</color>
+    <color name="md_theme_light_primaryContainer">#4CF9FF</color>
+    <color name="md_theme_light_onPrimaryContainer">#002021</color>
+    <color name="md_theme_light_primaryFixed">#4CF9FF</color>
+    <color name="md_theme_light_onPrimaryFixed">#002021</color>
+    <color name="md_theme_light_primaryFixedDim">#00DCE2</color>
+    <color name="md_theme_light_onPrimaryFixedVariant">#004F52</color>
+    <color name="md_theme_light_secondary">#4A6364</color>
+    <color name="md_theme_light_onSecondary">#FFFFFF</color>
+    <color name="md_theme_light_secondaryContainer">#CCE8E8</color>
+    <color name="md_theme_light_onSecondaryContainer">#041F20</color>
+    <color name="md_theme_light_secondaryFixed">#CCE8E8</color>
+    <color name="md_theme_light_onSecondaryFixed">#041F20</color>
+    <color name="md_theme_light_secondaryFixedDim">#B0CCCC</color>
+    <color name="md_theme_light_onSecondaryFixedVariant">#324B4C</color>
+    <color name="md_theme_light_tertiary">#4D5F7C</color>
+    <color name="md_theme_light_onTertiary">#FFFFFF</color>
+    <color name="md_theme_light_tertiaryContainer">#D5E3FF</color>
+    <color name="md_theme_light_onTertiaryContainer">#071C36</color>
+    <color name="md_theme_light_tertiaryFixed">#D5E3FF</color>
+    <color name="md_theme_light_onTertiaryFixed">#071C36</color>
+    <color name="md_theme_light_tertiaryFixedDim">#B5C7E9</color>
+    <color name="md_theme_light_onTertiaryFixedVariant">#354763</color>
+    <color name="md_theme_light_error">#BA1A1A</color>
+    <color name="md_theme_light_onError">#FFFFFF</color>
+    <color name="md_theme_light_errorContainer">#FFDAD6</color>
+    <color name="md_theme_light_onErrorContainer">#410002</color>
+    <color name="md_theme_light_outline">#6F7979</color>
+    <color name="md_theme_light_background">#FAFDFC</color>
+    <color name="md_theme_light_onBackground">#191C1C</color>
+    <color name="md_theme_light_surface">#F7FAF9</color>
+    <color name="md_theme_light_onSurface">#191C1C</color>
+    <color name="md_theme_light_surfaceVariant">#DAE4E4</color>
+    <color name="md_theme_light_onSurfaceVariant">#3F4949</color>
+    <color name="md_theme_light_inverseSurface">#2D3131</color>
+    <color name="md_theme_light_inverseOnSurface">#EFF1F1</color>
+    <color name="md_theme_light_inversePrimary">#00DCE2</color>
+    <color name="md_theme_light_shadow">#000000</color>
+    <color name="md_theme_light_surfaceTint">#00696C</color>
+    <color name="md_theme_light_outlineVariant">#BEC8C8</color>
+    <color name="md_theme_light_scrim">#000000</color>
+    <color name="md_theme_light_surfaceContainerHighest">#E0E3E2</color>
+    <color name="md_theme_light_surfaceContainerHigh">#E6E9E8</color>
+    <color name="md_theme_light_surfaceContainer">#ECEEEE</color>
+    <color name="md_theme_light_surfaceContainerLow">#F2F4F3</color>
+    <color name="md_theme_light_surfaceContainerLowest">#FFFFFF</color>
+    <color name="md_theme_light_surfaceBright">#F7FAF9</color>
+    <color name="md_theme_light_surfaceDim">#D8DADA</color>
+    <color name="md_theme_dark_primary">#00DCE2</color>
+    <color name="md_theme_dark_onPrimary">#003738</color>
+    <color name="md_theme_dark_primaryContainer">#004F52</color>
+    <color name="md_theme_dark_onPrimaryContainer">#4CF9FF</color>
+    <color name="md_theme_dark_primaryFixed">#4CF9FF</color>
+    <color name="md_theme_dark_onPrimaryFixed">#002021</color>
+    <color name="md_theme_dark_primaryFixedDim">#00DCE2</color>
+    <color name="md_theme_dark_onPrimaryFixedVariant">#004F52</color>
+    <color name="md_theme_dark_secondary">#B0CCCC</color>
+    <color name="md_theme_dark_onSecondary">#1B3435</color>
+    <color name="md_theme_dark_secondaryContainer">#324B4C</color>
+    <color name="md_theme_dark_onSecondaryContainer">#CCE8E8</color>
+    <color name="md_theme_dark_secondaryFixed">#CCE8E8</color>
+    <color name="md_theme_dark_onSecondaryFixed">#041F20</color>
+    <color name="md_theme_dark_secondaryFixedDim">#B0CCCC</color>
+    <color name="md_theme_dark_onSecondaryFixedVariant">#324B4C</color>
+    <color name="md_theme_dark_tertiary">#B5C7E9</color>
+    <color name="md_theme_dark_onTertiary">#1E314C</color>
+    <color name="md_theme_dark_tertiaryContainer">#354763</color>
+    <color name="md_theme_dark_onTertiaryContainer">#D5E3FF</color>
+    <color name="md_theme_dark_tertiaryFixed">#D5E3FF</color>
+    <color name="md_theme_dark_onTertiaryFixed">#071C36</color>
+    <color name="md_theme_dark_tertiaryFixedDim">#B5C7E9</color>
+    <color name="md_theme_dark_onTertiaryFixedVariant">#354763</color>
+    <color name="md_theme_dark_error">#FFB4AB</color>
+    <color name="md_theme_dark_onError">#690005</color>
+    <color name="md_theme_dark_errorContainer">#93000A</color>
+    <color name="md_theme_dark_onErrorContainer">#FFDAD6</color>
+    <color name="md_theme_dark_outline">#899393</color>
+    <color name="md_theme_dark_background">#191C1C</color>
+    <color name="md_theme_dark_onBackground">#E0E3E2</color>
+    <color name="md_theme_dark_surface">#101414</color>
+    <color name="md_theme_dark_onSurface">#C4C7C7</color>
+    <color name="md_theme_dark_surfaceVariant">#3F4949</color>
+    <color name="md_theme_dark_onSurfaceVariant">#BEC8C8</color>
+    <color name="md_theme_dark_inverseSurface">#E0E3E2</color>
+    <color name="md_theme_dark_inverseOnSurface">#191C1C</color>
+    <color name="md_theme_dark_inversePrimary">#00696C</color>
+    <color name="md_theme_dark_shadow">#000000</color>
+    <color name="md_theme_dark_surfaceTint">#00DCE2</color>
+    <color name="md_theme_dark_outlineVariant">#3F4949</color>
+    <color name="md_theme_dark_scrim">#000000</color>
+    <color name="md_theme_dark_surfaceContainerHighest">#323535</color>
+    <color name="md_theme_dark_surfaceContainerHigh">#272B2B</color>
+    <color name="md_theme_dark_surfaceContainer">#1D2020</color>
+    <color name="md_theme_dark_surfaceContainerLow">#191C1C</color>
+    <color name="md_theme_dark_surfaceContainerLowest">#0B0F0F</color>
+    <color name="md_theme_dark_surfaceBright">#363A3A</color>
+    <color name="md_theme_dark_surfaceDim">#101414</color>
 </resources>
