--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.PoQuizowane" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.PoQuizowane" parent="android:Theme.Material.Light.NoActionBar">
+        <item name="android:statusBarColor">@color/seed</item>
+        <item name="android:navigationBarColor">@color/seed</item>
+    </style>
+
+    <style name="Theme.PoQuizowane.Starting" parent="Theme.SplashScreen">
+        <item name="android:windowBackground">@color/seed</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_splash_screen_foreground</item>
+        <item name="postSplashScreenTheme">@style/Theme.PoQuizowane</item>
+    </style>
 </resources>
